# voting

./: .clang_complete  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README  eris
doc/: CMakeLists.txt  Doxyfile.in
include/voting/: Election.hpp  Influence.hpp  Party.hpp  PartyMover.hpp  Poll.hpp  Position.hpp  Voter.hpp
include/voting/election/: FPTP.hpp
report/: CMakeLists.txt  distributions.R  refs.bib  report.tex
src/: main.cpp  summarize.R  test-pos.cpp
src/voting/: Election.cpp  Influence.cpp  Party.cpp  PartyMover.cpp  Poll.cpp  Position.cpp  Voter.cpp
src/voting/election/: FPTP.cpp
