project(report)

include(${CMAKE_MODULE_PATH}/UseLATEX.cmake)
find_package(LATEX)

set(PDFLATEX_COMPILER xelatex)
set(BIBTEX_COMPILER biber)

file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/dists.pdf" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/screenshot.png" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

ADD_LATEX_DOCUMENT(report.tex
    BIBFILES refs.bib
    DEPENDS dists.pdf
    MANGLE_TARGET_NAMES
    NO_DEFAULT)

